[package]
name = "esp32_code"
version = "0.1.0"
authors = ["James Small <jamessmall1238@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[dependencies]
esp32-hal = "0.18.1"
esp-backtrace = { version = "0.17.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println"
] }
nb = "1.1"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
debug = true
opt-level = "s"


[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
embuild = "0.31.3"
